openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orchestrator
spec:
  selector:
    app: orchestrator
  ports:
    - port: 8010
      targetPort: 8010
